--- a/fox_stty_service/fox_stty_service.vcxproj
+++ b/fox_stty_service/fox_stty_service.vcxproj
@@ -78,9 +78,15 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(ProjectDir)..\bin\$(Platform)\$(Configuration)\</OutDir>
-    <IncludePath>..\FoxLogger;..\..\fox_project\FoxLogger;..\FoxFile;..\..\fox_project\FoxFile;..\FoxJSon;..\..\fox_project\FoxJSon;..\STLUtils;..\..\fox_project\STLUtils;..\FoxStty;..\..\fox_project\FoxStty;..\FoxDef;..\..\fox_project\FoxDef;..\fox_stty_data</IncludePath>
+    <IncludePath>..\..\fox_project\UUIDUtils;..\UUIDUtils;..\FoxLogger;..\..\fox_project\FoxLogger;..\FoxFile;..\..\fox_project\FoxFile;..\FoxJSon;..\..\fox_project\FoxJSon;..\STLUtils;..\..\fox_project\STLUtils;..\FoxStty;..\..\fox_project\FoxStty;..\FoxDef;..\..\fox_project\FoxDef;..\fox_stty_data</IncludePath>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\fox_project\FoxJSon\FoxJSon.vcxproj">
+      <Project>{445e0c6f-4cb3-4210-b160-17c12b0acb18}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\fox_project\UUIDUtils\UUIDUtils.vcxproj">
+      <Project>{a6422947-9285-4dee-95ee-a3c8b2d8f427}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\fox_stty_config\fox_stty_config.vcxproj">
       <Project>{a9ba27b3-9c23-4e7c-b0c6-bb2c0bf4ce04}</Project>
     </ProjectReference>
@@ -91,15 +97,19 @@
   <ItemGroup>
     <ClInclude Include="FoxSttyRecvHandler.h" />
     <ClInclude Include="FoxSttyService.h" />
+    <ClInclude Include="FoxSttySendRunnable.h" />
+    <ClInclude Include="FoxSttyTaskList.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FoxSttyRecvHandler.cpp" />
     <ClCompile Include="FoxSttyService.cpp" />
+    <ClCompile Include="FoxSttySendRunnable.cpp" />
+    <ClCompile Include="FoxSttyTaskList.cpp" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link>
       <AdditionalLibraryDirectories>$(RemoteRootDir)/bin/$(Platform)/$(Configuration);-Wl,--rpath=$(RemoteRootDir)/bin/$(Platform)/$(Configuration);%(Link.AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <LibraryDependencies>FoxLogger;STLUtils;FoxStty;fox_stty_config;fox_stty_data</LibraryDependencies>
+      <LibraryDependencies>FoxLogger;STLUtils;UUIDUtils;FoxJSon;FoxStty;fox_stty_config;fox_stty_data</LibraryDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
