--- a/fox_stty_boot/fox_stty_boot.vcxproj
+++ b/fox_stty_boot/fox_stty_boot.vcxproj
@@ -77,7 +77,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(ProjectDir)..\bin\$(Platform)\$(Configuration)\</OutDir>
-    <IncludePath>..\FoxSocket;..\..\fox_project\FoxSocket;..\FoxLogger;..\..\fox_project\FoxLogger;..\FoxFile;..\..\fox_project\FoxFile;..\FoxJSon;..\..\fox_project\FoxJSon;..\STLUtils;..\..\fox_project\STLUtils;..\FoxStty;..\..\fox_project\FoxStty;..\FoxDef;..\..\fox_project\FoxDef;..\fox_stty_config;..\fox_stty_data;..\fox_stty_service;..\fox_stty_proxy</IncludePath>
+    <IncludePath>..\UUIDUtils;..\..\fox_project\UUIDUtils;..\STLUtils;..\..\fox_project\STLUtils;..\FoxRestful;..\..\fox_project\FoxRestful;..\FoxSocket;..\..\fox_project\FoxSocket;..\FoxLogger;..\..\fox_project\FoxLogger;..\FoxFile;..\..\fox_project\FoxFile;..\FoxJSon;..\..\fox_project\FoxJSon;..\FoxStty;..\..\fox_project\FoxStty;..\FoxDef;..\..\fox_project\FoxDef;..\fox_stty_config;..\fox_stty_data;..\fox_stty_service;..\fox_stty_proxy</IncludePath>
   </PropertyGroup>
   <ItemGroup>
     <ClInclude Include="Boot.h" />
@@ -103,7 +103,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link>
       <AdditionalLibraryDirectories>$(RemoteRootDir)/bin/$(Platform)/$(Configuration);-Wl,--rpath=$(RemoteRootDir)/bin/$(Platform)/$(Configuration);%(Link.AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <LibraryDependencies>fox_stty_config;fox_stty_data;fox_stty_service;fox_stty_proxy</LibraryDependencies>
+      <LibraryDependencies>FoxRestful;STLUtils;fox_stty_config;fox_stty_data;fox_stty_service;fox_stty_proxy</LibraryDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
