--- a/fox_stty_proxy/fox_stty_proxy.vcxproj
+++ b/fox_stty_proxy/fox_stty_proxy.vcxproj
@@ -78,7 +78,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(ProjectDir)..\bin\$(Platform)\$(Configuration)\</OutDir>
-    <IncludePath>..\FoxSocket;..\..\fox_project\FoxSocket;..\FoxLogger;..\..\fox_project\FoxLogger;..\FoxFile;..\..\fox_project\FoxFile;..\FoxJSon;..\..\fox_project\FoxJSon;..\STLUtils;..\..\fox_project\STLUtils;..\FoxStty;..\..\fox_project\FoxStty;..\FoxDef;..\..\fox_project\FoxDef;..\fox_stty_data;..\fox_stty_config;..\fox_stty_service</IncludePath>
+    <IncludePath>..\FoxRestful;..\..\fox_project\FoxRestful;..\FoxSocket;..\..\fox_project\FoxSocket;..\FoxLogger;..\..\fox_project\FoxLogger;..\FoxFile;..\..\fox_project\FoxFile;..\FoxJSon;..\..\fox_project\FoxJSon;..\STLUtils;..\..\fox_project\STLUtils;..\FoxStty;..\..\fox_project\FoxStty;..\FoxDef;..\..\fox_project\FoxDef;..\fox_stty_data;..\fox_stty_config;..\fox_stty_service</IncludePath>
   </PropertyGroup>
   <ItemGroup>
     <ClInclude Include="FoxTcpServerSttyHandler.h" />
@@ -114,7 +114,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link>
       <AdditionalLibraryDirectories>$(RemoteRootDir)/bin/$(Platform)/$(Configuration);-Wl,--rpath=$(RemoteRootDir)/bin/$(Platform)/$(Configuration);%(Link.AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <LibraryDependencies>FoxLogger;STLUtils;FoxStty;FoxSocket;FoxJSon;fox_stty_config;fox_stty_data;fox_stty_service</LibraryDependencies>
+      <LibraryDependencies>FoxLogger;STLUtils;FoxRestful;FoxStty;FoxSocket;FoxJSon;fox_stty_config;fox_stty_data;fox_stty_service</LibraryDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
